recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value step
  if (step>=1){
      ^